--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "swiper": "^11.2.2"
   }
 }
